[package]
name = "dwcc"
version = "0.1.0"
authors = ["Dylan Wilson <dylanjw@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "lexer" }
utils = { path = "utils" }
regex = "1"
itertools = "0.8.2"
